IDE-2145 format code